--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="row">
-    <img class="firstimage" src="E:\study stuff\bca mawt\third sem\web technology\web\images\mountain.png"  >
+    <img class="firstimage"\images\mountain.png"  >
         <img class="secondimage" src="images\cloud.png" alt="">
 
 
