--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="row">
-    <img class="firstimage"\images\mountain.png"  >
+    <img class="firstimage" src="\images\mountain.png"  >
         <img class="secondimage" src="images\cloud.png" alt="">
 
 
