--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>YOGIKA URAF SIMRAN SIDE </title>
     <link rel="stylesheet" type="text/css" href="styles/stylessheet.css">
-    <link rel="icon" href="counseling.png">
+    <link rel="icon" href="images\counseling.png">
 
   </head>
   <body>
