--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 
     <h2 class="center_cont">ABOUT ME</h2>
-    <p class="me">An inqusisitive, innovative, responsible, and conventional developer, specializing in web development.</p>
+    <p class="me1">An inqusisitive, innovative, responsible, and conventional developer, specializing in web development.</p>
 
 <hr>
   <div class="skills">
