--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div>
 
       <h1>YOGIKA URAF SIMRAN</h1>
-      <h3 class="me">I'm programmer or web developer</h3>
+      <h3 class="me">I'm web developer</h3>
   </div>
 
   <div class="row">
